fix  placeBid